tests/invalid/variables/bad_decl.rs
/*
fail: 1
*/

main(): int {
    a: ints = 1;
    return a;
}